--- a/EFI/OC/Config.plist
+++ b/EFI/OC/Config.plist
@@ -131,20 +131,30 @@
         <dict>
             <key>Add</key>
             <dict>
-                <key>#PciRoot(0x0)/Pci(0x1C,0x1)/Pci(0x0,0x0)</key>
+                <key>#PciRoot(0x0)/Pci(0x1,0x0)/Pci(0x0,0x0)/Pci(0x0,0x0)/Pci(0x0,0x0)</key>
                 <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Built-in</string>
-                    <key>Comment</key>
-                    <string>Required tor macOS 10.15 up to 11.3 only</string>
-                    <key>device-id</key>
-                    <data>8hUAAA==</data>
+                    <key>@0,name</key>
+                    <string>ATY,Henbury</string>
+                    <key>@1,name</key>
+                    <string>ATY,Henbury</string>
+                    <key>@2,name</key>
+                    <string>ATY,Henbury</string>
+                    <key>@3,name</key>
+                    <string>ATY,Henbury</string>
+                    <key>ATY,DeviceName</key>
+                    <string>W6600X</string>
+                    <key>ATY,EFIVersion</key>
+                    <string>01.01.270</string>
+                    <key>ATY,FamilyName</key>
+                    <string>Radeon Pro</string>
                     <key>device_type</key>
-                    <string>Ethernet-Controller</string>
+                    <string>ATY,HenburyParent</string>
                     <key>model</key>
-                    <string>Intel I225-V</string>
+                    <string>AMD Radeon RRO W6600X</string>
+                    <key>name</key>
+                    <string>ATY,Henbury</string>
                 </dict>
-                <key>#PciRoot(0x0)/Pci(0x1F,0x3)</key>
+                <key>PciRoot(0x0)/Pci(0x1F,0x3)</key>
                 <dict>
                     <key>device_type</key>
                     <string>Audio device</string>
@@ -152,57 +162,6 @@
                     <integer>28</integer>
                     <key>model</key>
                     <string>Realtek ALC1220-VB</string>
-                </dict>
-                <key>#PciRoot(0x0)/Pci(0x2,0x0)</key>
-                <dict>
-                    <key>#AAPL,ig-platform-id</key>
-                    <data>AACbPg==</data>
-                    <key>AAPL,ig-platform-id</key>
-                    <data>BwCbPg==</data>
-                    <key>framebuffer-con0-busid</key>
-                    <data>BQAAAA==</data>
-                    <key>framebuffer-con0-enable</key>
-                    <data>AQAAAA==</data>
-                    <key>framebuffer-con0-flags</key>
-                    <data>xwMAAA==</data>
-                    <key>framebuffer-con0-index</key>
-                    <data>AQAAAA==</data>
-                    <key>framebuffer-con0-pipe</key>
-                    <data>CQAAAA==</data>
-                    <key>framebuffer-con0-type</key>
-                    <data>AAQAAA==</data>
-                    <key>framebuffer-con1-busid</key>
-                    <data>BAAAAA==</data>
-                    <key>framebuffer-con1-enable</key>
-                    <data>AQAAAA==</data>
-                    <key>framebuffer-con1-flags</key>
-                    <data>xwMAAA==</data>
-                    <key>framebuffer-con1-index</key>
-                    <data>AwAAAA==</data>
-                    <key>framebuffer-con1-pipe</key>
-                    <data>CAAAAA==</data>
-                    <key>framebuffer-con1-type</key>
-                    <data>AAgAAA==</data>
-                    <key>framebuffer-con2-busid</key>
-                    <data>AQAAAA==</data>
-                    <key>framebuffer-con2-enable</key>
-                    <data>AQAAAA==</data>
-                    <key>framebuffer-con2-flags</key>
-                    <data>xwMAAA==</data>
-                    <key>framebuffer-con2-index</key>
-                    <data>AgAAAA==</data>
-                    <key>framebuffer-con2-pipe</key>
-                    <data>CgAAAA==</data>
-                    <key>framebuffer-con2-type</key>
-                    <data>AAQAAA==</data>
-                    <key>framebuffer-fbmem</key>
-                    <data>AACQAA==</data>
-                    <key>framebuffer-patch-enable</key>
-                    <data>AQAAAA==</data>
-                    <key>framebuffer-stolenmem</key>
-                    <data>AAAwAQ==</data>
-                    <key>model</key>
-                    <string>Intel UHD Graphics 630</string>
                 </dict>
                 <key>PciRoot(0x0)/Pci(0x2,0x0)</key>
                 <dict>
@@ -745,9 +704,9 @@
                 <key>JumpstartHotPlug</key>
                 <false/>
                 <key>MinDate</key>
-                <integer>-1</integer>
+                <integer>0</integer>
                 <key>MinVersion</key>
-                <integer>-1</integer>
+                <integer>0</integer>
             </dict>
             <key>AppleInput</key>
             <dict>
@@ -758,7 +717,7 @@
                 <key>GraphicsInputMirroring</key>
                 <true/>
                 <key>KeyInitialDelay</key>
-                <integer>0</integer>
+                <integer>50</integer>
                 <key>KeySubsequentDelay</key>
                 <integer>5</integer>
                 <key>PointerPollMask</key>
@@ -791,7 +750,7 @@
                 <key>MinimumAudibleGain</key>
                 <integer>-55</integer>
                 <key>PlayChime</key>
-                <string>Auto</string>
+                <string>Disabled</string>
                 <key>ResetTrafficClass</key>
                 <false/>
                 <key>SetupDelay</key>
@@ -830,6 +789,16 @@
                     <true/>
                     <key>Path</key>
                     <string>OpenCanopy.efi</string>
+                </dict>
+                <dict>
+                    <key>Arguments</key>
+                    <string></string>
+                    <key>Comment</key>
+                    <string></string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>Path</key>
+                    <string>AudioDxe.efi</string>
                 </dict>
             </array>
             <key>Input</key>
@@ -880,7 +849,7 @@
                 <key>TextRenderer</key>
                 <string>BuiltinGraphics</string>
                 <key>UIScale</key>
-                <integer>-1</integer>
+                <integer>2</integer>
                 <key>UgaPassThrough</key>
                 <false/>
             </dict>
