Add SSDT-SBUS-MCHC setup

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -52,7 +52,7 @@
                     <key>Comment</key>
                     <string>Enables AppleSMBus and Memory Controller Support</string>
                     <key>Enabled</key>
-                    <false/>
+                    <true/>
                     <key>Path</key>
                     <string>SSDT-SBUS-MCHC.aml</string>
                 </dict>
