--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -180,12 +180,14 @@
                     <data>AwDImw==</data>
                     <key>AAPL,slot-name</key>
                     <string>Built-In</string>
-                    <key>comment</key>
-                    <string>headless mode</string>
+                    <key>device-id</key>
+                    <data>xZsAAA==</data>
                     <key>device_type</key>
                     <string>Display Controller</string>
                     <key>model</key>
                     <string>Intel UHD Graphics 630</string>
+                    <key>comment</key>
+                    <string>headless mode</string>
                 </dict>
             </dict>
             <key>Delete</key>
