Improve supports for BCM94360Z3

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -762,7 +762,7 @@
                     <key>SystemAudioVolume</key>
                     <data>Rg==</data>
                     <key>boot-args</key>
-                    <string>agdpmod=pikera brcmfx-country=CN</string>
+                    <string>agdpmod=pikera brcmfx-country=#a</string>
                     <key>csr-active-config</key>
                     <data>AAAAAA==</data>
                     <key>prev-lang:kbd</key>
